<resources>
    <string name="app_name">QpiqueApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Productos</string>
    <string name="menu_reflow">Ventas</string>
    <string name="menu_slideshow">Clientes</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_usuarios">Usuarios</string>
    <string name="menu_settings">Categorias</string>
    <string name="menu_logout">Cerrar Sesión</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="logo_del_local_de_pesca">Logo del local de pesca</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="descripcion_avatar_perfil">Avatar del perfil de usuario</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="formato_precio">Precio: $%.2f</string>
    <string name="formato_stock">Stock: %d"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>